@@ -5,6 +5,7 @@ Bugs:
 * Fix so that estimates of the proportion non-null in `mergeClusters` are always positive.
 * Fix so that calculation of filter with `ignoreUnassignedVar` doesn't delete existing base filter of same type.
 * Fix `plotClustersWorkflow` where wrong cluster was grabbed to plot.
+* Fix bug in `plotDendrogram` where colors of clusters plotted with could be subsumbed by color of previous clustering. (git Issue `#220`)
 
 Changes in version 2.1.1 ( Release date: 2018-05-08)
 ==============
